--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ exercise-solution/
 package-lock.json
 tsconfig.json
 
+
+
 # Logs
 logs
 *.log
@@ -88,6 +90,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+build/
 
 # Gatsby files
 .cache/
